--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -244,6 +244,15 @@ title = {{Impact of coronavirus in care homes in England (Vivaldi): 26 May to 19
 url = {https://www.ons.gov.uk/peoplepopulationandcommunity/healthandsocialcare/conditionsanddiseases/articles/impactofcoronavirusincarehomesinenglandvivaldi/26mayto19june2020/previous/v1},
 note = {Accessed: 2020-07-05}}
 
+
+@misc{Hale2020,
+author = {Hale, Thomas and Sam Webster and Anna Petherick and Toby Phillips and Beatriz Kira},
+year = 2020,
+title = {{Oxford COVID-19 Government Response Tracker, Blavatnik School of Government}},
+url = {https://www.bsg.ox.ac.uk/research/research-projects/coronavirus-government-response-tracker},
+note = {Accessed: 2020-07-05}}
+
+}
 # Software
 
 @misc{Dutey2020,
